testsuite/tests/checks/paramters_order/test.out
decls.ads:3:31: error: Parameters_Order - rule violation
3 |     procedure Proc_Invalid_1 (Flag : in out Integer; B : Boolean);
  |                               ^^^^ 

decls.ads:4:31: error: Parameters_Order - rule violation
4 |     procedure Proc_Invalid_2 (Flag: Boolean := True; B2 : Boolean);
  |                               ^^^^ 

